# aws-python-platform-template

./: .claudeignore  .dockerignore  .env.example  .gitignore  .graphifyignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
docs/: aws-deployment.md  design-principles.md  production-readiness-review.md  redis.md
scripts/: build_and_push_ecr.sh
src/platform_service/: __init__.py  main.py
src/platform_service/api/routes/: health.py
src/platform_service/api/routes/v1/: cache.py  example.py
src/platform_service/core/: auth.py  cache.py  config.py  errors.py  logging.py  middleware.py  readiness.py  request_context.py
src/platform_service/repositories/: example_repository.py  secrets_manager_repository.py
src/platform_service/services/: cache_service.py  example_service.py
src/platform_service/workers/: example_worker.py
tests/: conftest.py  test_config.py  test_example.py  test_health.py  test_readiness.py  test_secrets_manager.py
