[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-python-platform-template"
version = "0.1.0"
description = "Production-oriented Python service template for AWS-hosted platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0,<2.0",
    "fastapi>=0.115.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.8.0,<3.0",
    "pydantic-settings>=2.4.0,<3.0",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.9",
    "httpx>=0.27.0",
    "pip-audit>=2.9.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q --cov=platform_service --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
